pkg/deps/testdata/ub/project/invalid/bad-toolchain-version.ub
project: {
  unobin-version: 'latest'
  requires: {}
}
